--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+aiohttp==3.4.4
+async-timeout==3.0.1
+attrs==18.2.0
 certifi==2018.10.15
 chardet==3.0.4
+dhooks==1.0.9
 idna==2.7
+idna-ssl==1.1.0
+multidict==4.5.2
 oauthlib==2.1.0
 PySocks==1.6.8
 pytz==2018.7
@@ -9,3 +15,4 @@ requests-oauthlib==1.0.0
 six==1.11.0
 tweepy==3.6.0
 urllib3==1.24.1
+yarl==1.2.6
