--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,34 @@
 aiohttp==3.6.2
-appdirs==1.4.3
+appdirs==1.4.4
 async-timeout==3.0.1
 attrs==19.3.0
 black==19.10b0
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
-click==7.1.1
+click==7.1.2
 dhooks==1.1.3
 entrypoints==0.3
-flake8==3.7.9
+flake8==3.8.2
 idna==2.9
 mccabe==0.6.1
-multidict==4.7.5
-mypy==0.761
+multidict==4.7.6
+mypy==0.770
 mypy-extensions==0.4.3
 oauthlib==3.1.0
-pathspec==0.7.0
-pycodestyle==2.5.0
-pyflakes==2.1.1
+pathspec==0.8.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
 PySocks==1.7.1
-regex==2020.2.20
+python-dotenv==0.13.0
+regex==2020.5.14
 requests==2.23.0
 requests-oauthlib==1.3.0
-rope==0.16.0
-six==1.14.0
-toml==0.10.0
+rope==0.17.0
+six==1.15.0
+toml==0.10.1
 tweepy==3.8.0
 typed-ast==1.4.1
-typing-extensions==3.7.4.1
-urllib3==1.25.8
-yarl==1.4.2
-aiohttp==3.6.2
-appdirs==1.4.3
-async-timeout==3.0.1
-attrs==19.3.0
-black==19.10b0
-certifi==2019.11.28
-chardet==3.0.4
-click==7.1.1
-dhooks==1.1.3
-entrypoints==0.3
-flake8==3.7.9
-idna==2.9
-mccabe==0.6.1
-multidict==4.7.5
-mypy==0.761
-mypy-extensions==0.4.3
-oauthlib==3.1.0
-pathspec==0.7.0
-pycodestyle==2.5.0
-pyflakes==2.1.1
-PySocks==1.7.1
-regex==2020.2.20
-requests==2.23.0
-requests-oauthlib==1.3.0
-rope==0.16.0
-six==1.14.0
-toml==0.10.0
-tweepy==3.8.0
-typed-ast==1.4.1
-typing-extensions==3.7.4.1
-urllib3==1.25.8
+typing-extensions==3.7.4.2
+urllib3==1.25.9
+yappi==1.2.5
 yarl==1.4.2
