--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,18 @@
-aiohttp==3.6.2
-appdirs==1.4.4
-async-timeout==3.0.1
-attrs==20.2.0
-black==20.8b1
+-i https://pypi.org/simple
+aiohttp==3.6.3; python_full_version >= '3.5.3'
+async-timeout==3.0.1; python_full_version >= '3.5.3'
+attrs==20.2.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 certifi==2020.6.20
 chardet==3.0.4
-click==7.1.2
 dhooks==1.1.4
-entrypoints==0.3
-flake8==3.8.4
-idna==2.10
-mccabe==0.6.1
-multidict==4.7.6
-mypy==0.790
-mypy-extensions==0.4.3
-oauthlib==3.1.0
-pathspec==0.8.0
-pycodestyle==2.6.0
-pyflakes==2.2.0
-PySocks==1.7.1
+idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+multidict==4.7.6; python_version >= '3.5'
+oauthlib==3.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pysocks==1.7.1
 python-dotenv==0.14.0
-regex==2020.9.27
-requests==2.24.0
 requests-oauthlib==1.3.0
-rope==0.18.0
-six==1.15.0
-toml==0.10.1
+requests[socks]==2.24.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 tweepy==3.9.0
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-urllib3==1.25.10
-yappi==1.3.0
-yarl==1.6.0
+urllib3==1.25.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+yarl==1.5.1; python_version >= '3.5'
