--- a/discord-twitter-webhooks.service
+++ b/discord-twitter-webhooks.service
@@ -7,7 +7,7 @@ After=network-online.target
 Type=simple
 WorkingDirectory=%h/discord-twitter-webhooks
 ExecStart=/usr/bin/pipenv run python %h/discord-twitter-webhooks/main.py
-Restart=on-failure
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
