--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,14 @@
 #
 
 -i https://pypi.org/simple
+-e git+https://github.com/kyb3r/dhooks.git@20a79f42fe799470fe8d079f877316475dc867bc#egg=dhooks
 aiohttp==3.7.3; python_version >= '3.6'
 async-timeout==3.0.1; python_full_version >= '3.5.3'
 attrs==20.3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 certifi==2020.11.8
 chardet==3.0.4
-dhooks==1.1.4
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-multidict==5.0.2; python_version >= '3.5'
+multidict==5.1.0; python_version >= '3.6'
 oauthlib==3.1.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pysocks==1.7.1
 python-dotenv==0.15.0
