--- a/.env-example
+++ b/.env-example
@@ -4,5 +4,5 @@ CONSUMER_KEY=ASFkopkoasfPOFkopaf
 CONSUMER_SECRET=ASFkopkoasfPOFkopafASFkopkoasfPOFkopafASFkopkoasfPOFkopaf
 ACCESS_TOKEN=1294501204821094-kKPOASPKOFpkoaskfpo
 ACCESS_TOKEN_SECRET=ASKOpokfpkoaspofOPFPO2908iAKOPSFKPO
-USERS_TO_FOLLOW=12549841489201410
+USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
 LOG_LEVEL=INFO
