--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
+# https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks
 WEBHOOK_URL=https://discordapp.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
 WEBHOOK_URL_ERROR=https://discordapp.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
+
+# https://developer.twitter.com/en/apps
 CONSUMER_KEY=ASFkopkoasfPOFkopaf
 CONSUMER_SECRET=ASFkopkoasfPOFkopafASFkopkoasfPOFkopafASFkopkoasfPOFkopaf
 ACCESS_TOKEN=1294501204821094-kKPOASPKOFpkoaskfpo
 ACCESS_TOKEN_SECRET=ASKOpokfpkoaspofOPFPO2908iAKOPSFKPO
+
+# https://tweeterid.com/ Don't use spaces between commas
 USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
+
+# Log severity. Can be CRITICAL, ERROR, WARNING, INFO or DEBUG
 LOG_LEVEL=INFO
+
+# Discord ID for owner. Will get pinged when bot encounters error.
+DISCORD_OWNER_ID=126462229892694018
