--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
 
 # Log severity. Can be CRITICAL, ERROR, WARNING, INFO or DEBUG
 LOG_LEVEL=INFO
+
+# Where https://github.com/TheLovinator1/twitter-image-collage-maker is running.
+# You can run your own version or use the default https://twitter.lovinator.space/add
+# The only information I have about you are the images that are generated.
+# Nothing (e.g IP number) is connected to those images.
+# Email tlovinator@gmail.com or go to https://github.com/TheLovinator1/discord-twitter-webhooks#need-help
+# and give me the id of the tweet if you want me to delete the image.
+TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
