--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ ACCESS_TOKEN=1294501204821094-kKPOASPKOFpkoaskfpo
 ACCESS_TOKEN_SECRET=ASKOpokfpkoaspofOPFPO2908iAKOPSFKPO
 
 # https://tweeterid.com/ Don't use spaces between commas
-USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
+USERS_TO_FOLLOW=['MohitVarikuti', 'CNBC', 'CNN']
 
 # Log severity. Can be CRITICAL, ERROR, WARNING, INFO or DEBUG
 LOG_LEVEL=INFO
