--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ async-timeout==3.0.1
 attrs==21.2.0
 certifi==2020.12.5
 chardet==4.0.0
-git+git://github.com/kyb3r/dhooks.git#egg=dhooks
+-e git://github.com/kyb3r/dhooks.git@20a79f42fe799470fe8d079f877316475dc867bc#egg=dhooks
 idna==2.10
 multidict==5.1.0
 oauthlib==3.1.0
@@ -12,7 +12,7 @@ python-dotenv==0.17.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.16.0
-tweepy==3.10.0
+-e git+https://github.com/tweepy/tweepy.git@05664fbf59c263a473fac6fa0d72e95c30920ace#egg=tweepy
 typing-extensions==3.10.0.0
 urllib3==1.26.4
 yarl==1.6.3
