Add support for replies and retweets

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,25 @@ ACCESS_TOKEN=1294501204821094-kKPOASPKOFpkoaskfpo
 ACCESS_TOKEN_SECRET=ASKOpokfpkoaspofOPFPO2908iAKOPSFKPO
 
 # https://tweeterid.com/ Don't use spaces between commas
+# USERS_TO_FOLLOW is mandatory, but replies and retweets are optional.
+# You have to put the id in USERS_TO_FOLLOW if you want to get replies and retweets.
+# Put the same ID in each to get everything.
 USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
+
+# Get replies to other people: (Optional)
+USER_LIST_REPLIES_TO_OTHERS_TWEET=12549841489201410,852185020125098
+
+# Get replies from other people on our tweets: (Optional)
+USER_LIST_REPLIES_TO_OUR_TWEET=12549841489201410,852185020125098
+
+# Get message when tracked user retweets tweet: (Optional)
+USER_LIST_WE_RETWEET_SOMEONE_ELSES_TWEET=12549841489201410,18205090125
+
+# Get message when tracked users tweet is retweeted by someone else: (Optional)
+USER_LIST_SOMEONE_RETWEETS_OUR_TWEET=18205090125
+
+# Should we message when a tracked user retweets their own tweet? True or False
+GET_RETWEET_OF_OWN_TWEET=False
 
 # Log severity. Can be CRITICAL, ERROR, WARNING, INFO or DEBUG
 LOG_LEVEL=INFO
@@ -16,7 +34,7 @@ LOG_LEVEL=INFO
 # Where https://github.com/TheLovinator1/twitter-image-collage-maker is running.
 # You can run your own version or use the default https://twitter.lovinator.space/add
 # The only information I have about you are the images that are generated.
-# Nothing (e.g IP number) is connected to those images.
+# Nothing (e.g IP address) is connected to those images.
 # Email tlovinator@gmail.com or go to https://github.com/TheLovinator1/discord-twitter-webhooks#need-help
 # and give me the id of the tweet if you want me to delete the image.
 TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
