--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       #----------------------------------------------
-      #       check-out repo and set-up python     
+      #       check-out repo and set-up python
       #----------------------------------------------
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       #----------------------------------------------
-      #        load pip cache if cache exists      
+      #        load pip cache if cache exists
       #----------------------------------------------
       - uses: actions/cache@v2
         with:
@@ -20,7 +20,7 @@ jobs:
           key: ${{ runner.os }}-pip
           restore-keys: ${{ runner.os }}-pip
       #----------------------------------------------
-      #          install and run linters      
+      #          install and run linters
       #----------------------------------------------
       - run: python -m pip install black isort
       - run: |
@@ -31,12 +31,12 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ "ubuntu-latest" ]
-        python-version: [ "3.9" ]
+        os: ["ubuntu-latest"]
+        python-version: ["3.9"]
     runs-on: ${{ matrix.os }}
     steps:
       #----------------------------------------------
-      #       check-out repo and set-up python     
+      #       check-out repo and set-up python
       #----------------------------------------------
       - name: Check out repository
         uses: actions/checkout@v2
@@ -45,7 +45,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       #----------------------------------------------
-      #  -----  install & configure poetry  -----      
+      #  -----  install & configure poetry  -----
       #----------------------------------------------
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -53,7 +53,7 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
       #----------------------------------------------
-      #       load cached venv if cache exists      
+      #       load cached venv if cache exists
       #----------------------------------------------
       - name: Load cached venv
         id: cached-poetry-dependencies
@@ -62,20 +62,25 @@ jobs:
           path: .venv
           key: venv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
       #----------------------------------------------
-      # install dependencies if cache does not exist 
+      # install dependencies if cache does not exist
       #----------------------------------------------
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
       #----------------------------------------------
-      # install your root project, if required 
-      #----------------------------------------------      
+      # install your root project, if required
+      #----------------------------------------------
       - name: Install library
         run: poetry install --no-interaction
       #----------------------------------------------
-      # run test suite   
+      # run test suite
       #----------------------------------------------
       - name: Run tests
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
         run: |
           source .venv/bin/activate
           pytest
