--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ python-dotenv = "^0.18.0"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
 black = { version = "^21.6b0", allow-prereleases = true }
+mypy = "^0.910"
+pydocstyle = "^6.1.1"
+flake8 = "^3.9.2"
+types-requests = "^2.25.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
