--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,35 @@
 # https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks
-WEBHOOK_URL=https://discordapp.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
+# Right click channel in Discord -> Intergrations -> Webhooks -> Create Webhook
+WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
 
 # https://developer.twitter.com/en/apps
+# Create App if you don't already have one.
+# Twitter API key
 CONSUMER_KEY=ASFkopkoasfPOFkopaf
+# Twitter API Secret Key
 CONSUMER_SECRET=ASFkopkoasfPOFkopafASFkopkoasfPOFkopafASFkopkoasfPOFkopaf
-ACCESS_TOKEN=1294501204821094-kKPOASPKOFpkoaskfpo
-ACCESS_TOKEN_SECRET=ASKOpokfpkoaspofOPFPO2908iAKOPSFKPO
+# Twitter Access Token
+ACCESS_TOKEN=439480409-GmeffU8DHjlaRv8JgpwBZmVxVLzcYmtXijfcK6sv
+# Twitter Access Token Secret
+ACCESS_TOKEN_SECRET=aazOzHxGuwoKRe0SUdSPEbLetH76QKyuZIy0PMAkJ6K2a
 
-# https://tweeterid.com/ Don't use spaces between commas
+# https://tweeterid.com/ Don't use spaces between commas.
 # USERS_TO_FOLLOW is mandatory, but replies and retweets are optional.
-# You have to put the id in USERS_TO_FOLLOW if you want to get replies and retweets.
-# Put the same ID in each to get everything.
+# If you use the optional you also have to put that ID in USERS_TO_FOLLOW.
+# No comma is needed if one ID.
 USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
 
-# Get replies to other people: (Optional)
-USER_LIST_REPLIES_TO_OTHERS_TWEET=12549841489201410,852185020125098
+# Get replies to other people: (Optional, uncomment to use)
+# USER_LIST_REPLIES_TO_OTHERS_TWEET=12549841489201410,852185020125098
 
-# Get replies from other people on our tweets: (Optional)
-USER_LIST_REPLIES_TO_OUR_TWEET=12549841489201410,852185020125098
+# Get replies from other people on our tweets: (Optional, uncomment to use)
+# USER_LIST_REPLIES_TO_OUR_TWEET=12549841489201410,852185020125098
 
-# Get message when tracked user retweets tweet: (Optional)
-USER_LIST_WE_RETWEET_SOMEONE_ELSES_TWEET=12549841489201410,18205090125
+# Get message when tracked user retweets tweet: (Optional, uncomment to use)
+# USER_LIST_WE_RETWEET_SOMEONE_ELSES_TWEET=12549841489201410,18205090125
 
-# Get message when tracked users tweet is retweeted by someone else: (Optional)
-USER_LIST_SOMEONE_RETWEETS_OUR_TWEET=18205090125
+# Get a message when tracked users tweet is retweeted by someone else: (Optional, uncomment to use)
+# USER_LIST_SOMEONE_RETWEETS_OUR_TWEET=18205090125
 
 # Should we message when a tracked user retweets their own tweet? True or False
 GET_RETWEET_OF_OWN_TWEET=False
@@ -32,7 +38,7 @@ GET_RETWEET_OF_OWN_TWEET=False
 LOG_LEVEL=INFO
 
 # Where https://github.com/TheLovinator1/twitter-image-collage-maker is running.
-# You can run your own version or use the default https://twitter.lovinator.space/add
+# You can run your self-hosted version or use the default https://twitter.lovinator.space/add
 # The only information I have about you are the images that are generated.
 # Nothing (e.g IP address) is connected to those images.
 # Email tlovinator@gmail.com or go to https://github.com/TheLovinator1/discord-twitter-webhooks#need-help
