Use environment variable instead of a hardcoded webhook

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Right click channel in Discord -> Intergrations -> Webhooks -> Create Webhook
 WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
 
+# Webhook for unit tests. No need to fill this out if you are not going
+# to run tests. You can run tests with 'poetry run pytest'
+# TEST_WEBHOOK=https://discord.com/api/webhooks/125125430453153/a3AFSMfsafafaSFfsafstB_lzSafaSFsaf-AlPAHseJWqhASFfsafg_aFsfrac9-CeVeUaSFsfaI1ac1vT
+
 # https://developer.twitter.com/en/apps
 # Create App if you don't already have one.
 # Twitter API key
