Update comments in .env.example

--- a/.env.example
+++ b/.env.example
@@ -23,16 +23,16 @@ ACCESS_TOKEN_SECRET=aazOzHxGuwoKRe0SUdSPEbLetH76QKyuZIy0PMAkJ6K2a
 # No comma is needed if one ID.
 USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
 
-# Get replies to other people: (Optional, uncomment to use)
+# Get replies from monitored ID below to other people: (Optional, uncomment to use)
 # USER_LIST_REPLIES_TO_OTHERS_TWEET=12549841489201410,852185020125098
 
-# Get replies from other people on our tweets: (Optional, uncomment to use)
+# Get replies from other people on tweet from monitored ID below: (Optional, uncomment to use)
 # USER_LIST_REPLIES_TO_OUR_TWEET=12549841489201410,852185020125098
 
-# Get message when tracked user retweets tweet: (Optional, uncomment to use)
+# Get message when ID below retweets a tweet: (Optional, uncomment to use)
 # USER_LIST_WE_RETWEET_SOMEONE_ELSES_TWEET=12549841489201410,18205090125
 
-# Get a message when tracked users tweet is retweeted by someone else: (Optional, uncomment to use)
+# Get a message when ID belows tweet is retweeted by someone else: (Optional, uncomment to use)
 # USER_LIST_SOMEONE_RETWEETS_OUR_TWEET=18205090125
 
 # Should we message when a tracked user retweets their own tweet? True or False
