--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,9 @@ bot = "discord_twitter_webhooks.main:start"
 python = "^3.9"
 dhooks = { git = "https://github.com/kyb3r/dhooks.git" }
 requests = "^2.26.0"
-tweepy = { git = "https://github.com/tweepy/tweepy.git" }
 python-dotenv = "^0.18.0"
 beautifulsoup4 = "^4.9.3"
+tweepy = "^4.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
