--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ mypy = "^0.910"
 pydocstyle = "^6.1.1"
 flake8 = "^3.9.2"
 types-requests = "^2.25.0"
+pylint = "^2.11.1"
+prospector = "^1.5.1"
+bandit = "^1.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
