--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# No space should be between the equal sign in your .env.
+
 # https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks
 # Right click channel in Discord -> Intergrations -> Webhooks -> Create Webhook
 WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
