--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,21 +24,18 @@ bot = "discord_twitter_webhooks.main:start"
 [tool.poetry.dependencies]
 python = "^3.9"
 dhooks = { git = "https://github.com/kyb3r/dhooks.git" }
-requests = "^2.26.0"
-python-dotenv = "^0.18.0"
-beautifulsoup4 = "^4.9.3"
-tweepy = "^4.1.0"
+requests = "^2.27.1"
+python-dotenv = "^0.19.2"
+beautifulsoup4 = "^4.10.0"
+tweepy = "^4.5.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.4"
-black = { version = "^21.6b0", allow-prereleases = true }
-mypy = "^0.910"
-pydocstyle = "^6.1.1"
-flake8 = "^3.9.2"
-types-requests = "^2.25.0"
-pylint = "^2.11.1"
-prospector = "^1.5.1"
-bandit = "^1.7.0"
+pytest = "^6.2.5"
+black = {version = "^22.1.0", allow-prereleases = true}
+mypy = "^0.931"
+flake8 = "^4.0.1"
+types-requests = "^2.27.8"
+bandit = "^1.7.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
