--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,11 @@ beautifulsoup4 = "^4.10.0"
 tweepy = "^4.5.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.5"
-black = {version = "^22.1.0", allow-prereleases = true}
+pytest = "^7.0.1"
+black = "^22.1.0"
 mypy = "^0.931"
 flake8 = "^4.0.1"
-types-requests = "^2.27.9"
+types-requests = "^2.27.10"
 bandit = "^1.7.2"
 
 [build-system]
