Fix license in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "discord-twitter-webhooks"
 version = "0.1.0"
 description = "Stream tweets to Discord"
 authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
-license = "MIT"
+license = "GPL-3.0-or-later"
 readme = "README.md"
 homepage = "https://github.com/TheLovinator1/discord-twitter-webhooks"
 repository = "https://github.com/TheLovinator1/discord-twitter-webhooks"
