--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,6 @@ WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB
 # TEST_WEBHOOK=https://discord.com/api/webhooks/125125430453153/a3AFSMfsafafaSFfsafstB_lzSafaSFsaf-AlPAHseJWqhASFfsafg_aFsfrac9-CeVeUaSFsfaI1ac1vT
 
 # https://developer.twitter.com/en/apps
-# Create App if you don't already have one.
 # Twitter API key
 CONSUMER_KEY=ASFkopkoasfPOFkopaf
 # Twitter API Secret Key
@@ -20,33 +19,31 @@ ACCESS_TOKEN=439480409-GmeffU8DHjlaRv8JgpwBZmVxVLzcYmtXijfcK6sv
 ACCESS_TOKEN_SECRET=aazOzHxGuwoKRe0SUdSPEbLetH76QKyuZIy0PMAkJ6K2a
 
 # https://tweeterid.com/ Don't use spaces between commas.
-# USERS_TO_FOLLOW is mandatory, but replies and retweets are optional.
-# If you use the optional you also have to put that ID in USERS_TO_FOLLOW.
+# You will have to add the ID to USERS_TO_FOLLOW if you want to use
+# the environment variables below. (Replies to others, replies to us, etc.)
 # No comma is needed if one ID.
 USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
 
-# Get replies from monitored ID below to other people: (Optional, uncomment to use)
+# Our and we means ID added to variable (i.e 12549841489201410 and 852185020125098).
+# Get notified when we reply to someone elses tweet.
 # USER_LIST_REPLIES_TO_OTHERS_TWEET=12549841489201410,852185020125098
 
-# Get replies from other people on tweet from monitored ID below: (Optional, uncomment to use)
+# Get notified when someone replies to our tweet.
 # USER_LIST_REPLIES_TO_OUR_TWEET=12549841489201410,852185020125098
 
-# Get message when ID below retweets a tweet: (Optional, uncomment to use)
+# Get notified when we retweets someone elses tweet.
 # USER_LIST_WE_RETWEET_SOMEONE_ELSES_TWEET=12549841489201410,18205090125
 
-# Get a message when ID belows tweet is retweeted by someone else: (Optional, uncomment to use)
+# Get notified when someone elses retweets our tweet.
 # USER_LIST_SOMEONE_RETWEETS_OUR_TWEET=18205090125
 
-# Should we message when a tracked user retweets their own tweet? True or False
-GET_RETWEET_OF_OWN_TWEET=False
+# Should we get notified when we retweets our own tweet? True or False
+# (Currently broken)
+# GET_RETWEET_OF_OWN_TWEET=False
 
 # Log severity. Can be CRITICAL, ERROR, WARNING, INFO or DEBUG
 LOG_LEVEL=INFO
 
 # Where https://github.com/TheLovinator1/twitter-image-collage-maker is running.
 # You can run your self-hosted version or use the default https://twitter.lovinator.space/add
-# The only information I have about you are the images that are generated.
-# Nothing (e.g IP address) is connected to those images.
-# Email tlovinator@gmail.com or go to https://github.com/TheLovinator1/discord-twitter-webhooks#need-help
-# and give me the id of the tweet if you want me to delete the image.
 TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
