--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -30,6 +30,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: thelovinator/discord-twitter-webhooks
+          flavor: latest=${{ github.ref == 'refs/heads/master' }}
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
