Add information about V1 API keys

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB
 # TEST_WEBHOOK=https://discord.com/api/webhooks/125125430453153/a3AFSMfsafafaSFfsafstB_lzSafaSFsaf-AlPAHseJWqhASFfsafg_aFsfrac9-CeVeUaSFsfaI1ac1vT
 
 # https://developer.twitter.com/en/apps
+# This bot was created before V2 of Twitter's API so you need to apply
+# for Elevated API access to get the V1 API keys. After you have applied
+# you can go to Projects & Apps -> Create App under Standalone Apps
+# URL is https://developer.twitter.com/en/portal/apps/new
 # Twitter API key
 CONSUMER_KEY=ASFkopkoasfPOFkopaf
 # Twitter API Secret Key
