--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ python-dotenv = "^0.19.2"
 beautifulsoup4 = "^4.10.0"
 tweepy = "^4.6.0"
 
+[tool.poetry.dev-dependencies]
+pytest = "^7.0.1"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
