--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,11 @@ bot = "discord_twitter_webhooks.main:start"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-dhooks = { git = "https://github.com/kyb3r/dhooks.git" }
 requests = "^2.27.1"
 python-dotenv = "^0.20.0"
 beautifulsoup4 = "^4.10.0"
 tweepy = "^4.6.0"
+discord-webhook = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
