💥BREAKING💥Use Twitter v2 API
You will have to use a bearer token instead of API keys
users_to_follow= is now rule=

--- a/.env.example
+++ b/.env.example
@@ -1,45 +1,20 @@
-# No space should be between the equal sign in your .env.
+# No space should be before and after the equal sign in your .env.
 
 # https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks
 # Right click channel in Discord -> Intergrations -> Webhooks -> Create Webhook
 WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
 
-# Webhook for unit tests. No need to fill this out if you are not going
-# to run tests. You can run tests with 'poetry run pytest'
-# TEST_WEBHOOK=https://discord.com/api/webhooks/125125430453153/a3AFSMfsafafaSFfsafstB_lzSafaSFsaf-AlPAHseJWqhASFfsafg_aFsfrac9-CeVeUaSFsfaI1ac1vT
+# https://developer.twitter.com/en/portal/dashboard
+# Fill out your information and accept the developer agreement & policy
+# Create an app and copy your bearer token
+BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAAMGcQEAAAAA2Xh6%2Bjxw4NM7xetr2C9trBdsNUo%3DIyQF6ddixAnAtuAUq7NRKUVcGJsJ8IlriICvVWqCWFK2SfhRY
 
-# https://developer.twitter.com/en/apps
-# This bot was created before V2 of Twitter's API so you need to apply
-# for Elevated API access to get the V1 API keys. After you have applied
-# you can go to Projects & Apps -> Create App under Standalone Apps
-# URL is https://developer.twitter.com/en/portal/apps/new
-# Twitter API key
-CONSUMER_KEY=ASFkopkoasfPOFkopaf
-# Twitter API Secret Key
-CONSUMER_SECRET=ASFkopkoasfPOFkopafASFkopkoasfPOFkopafASFkopkoasfPOFkopaf
-# Twitter Access Token
-ACCESS_TOKEN=439480409-GmeffU8DHjlaRv8JgpwBZmVxVLzcYmtXijfcK6sv
-# Twitter Access Token Secret
-ACCESS_TOKEN_SECRET=aazOzHxGuwoKRe0SUdSPEbLetH76QKyuZIy0PMAkJ6K2a
-
-# https://tweeterid.com/ Don't use spaces between commas.
-# You will have to add the ID to USERS_TO_FOLLOW if you want to use
-# the environment variables below. (Replies to others, replies to us, etc.)
-# No comma is needed if one ID.
-USERS_TO_FOLLOW=12549841489201410,18205090125,852185020125098
-
-# Our and we means ID added to variable (i.e 12549841489201410 and 852185020125098).
-# Get notified when we reply to someone elses tweet.
-# USER_LIST_REPLIES_TO_OTHERS_TWEET=12549841489201410,852185020125098
-
-# Get notified when someone replies to our tweet.
-# USER_LIST_REPLIES_TO_OUR_TWEET=12549841489201410,852185020125098
-
-# Get notified when we retweets someone elses tweet.
-# USER_LIST_WE_RETWEET_SOMEONE_ELSES_TWEET=12549841489201410,18205090125
-
-# Get notified when someone elses retweets our tweet.
-# USER_LIST_SOMEONE_RETWEETS_OUR_TWEET=18205090125
+# Our rule for the filtered stream.
+# https://developer.twitter.com/en/docs/twitter-api/tweets/filtered-stream/integrate/build-a-rule
+#
+# Rule can be 512 characters long.
+# Examples can be found in the README.md
+RULE="(from:Steam OR from:Xbox OR from:PlayStation) -is:retweet -is:reply -is:quote"
 
 # Log severity. Can be CRITICAL, ERROR, WARNING, INFO or DEBUG
 LOG_LEVEL=INFO
