Add support for several webhooks and rules

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,15 @@
 
 # https://support.discord.com/hc/en-us/articles/228383668-Intro-to-Webhooks
 # Right click channel in Discord -> Intergrations -> Webhooks -> Create Webhook
+# RULE goes to WEBHOOK_URL
+# RULE2 goes to WEBHOOK_URL2
+# RULE3 goes to WEBHOOK_URL3 and so on
+# If you only have one webhook/rule, you can leave the other webhooks blank ("").
 WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
+WEBHOOK_URL2=""
+WEBHOOK_URL3=""
+WEBHOOK_URL4=""
+WEBHOOK_URL5=""
 
 # https://developer.twitter.com/en/portal/dashboard
 # Fill out your information and accept the developer agreement & policy
@@ -16,7 +24,15 @@ BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAAMGcQEAAAAA2Xh6%2Bjxw4NM7xetr2C9trBdsNUo%3DIyQ
 #
 # Rule can be 512 characters long.
 # Examples can be found in the README.md
+# RULE goes to WEBHOOK_URL
+# RULE2 goes to WEBHOOK_URL2
+# RULE3 goes to WEBHOOK_URL3 and so on
+# If you only have one webhook/rule, you can leave the other webhooks blank ("").
 RULE="(from:Steam OR from:Xbox OR from:PlayStation) -is:retweet -is:reply -is:quote"
+RULE2=""
+RULE3=""
+RULE4=""
+RULE5=""
 
 # Log severity. Can be CRITICAL, ERROR, WARNING, INFO or DEBUG
 LOG_LEVEL=INFO
