Send errors to Discord

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,10 @@ RULE3=""
 RULE4=""
 RULE5=""
 
+# If True, errors will be sent to ERROR_WEBHOOK.
+ERROR_WEBHOOK=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
+SEND_ERRORS=False
+
 # Log severity. Can be CRITICAL, ERROR, WARNING, INFO or DEBUG
 LOG_LEVEL=INFO
 
