Add support for unlimited rules and webhooks

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,14 @@
 # RULE goes to WEBHOOK_URL
 # RULE2 goes to WEBHOOK_URL2
 # RULE3 goes to WEBHOOK_URL3 and so on
-# If you only have one webhook/rule, you can leave the other webhooks blank ("").
+# You can have 5 rules if you Essential API access.
+# You can have 25 rules if you Elevated API access.
+# You can have 1024 rules if you Academic Research API access.
 WEBHOOK_URL=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
-WEBHOOK_URL2=""
-WEBHOOK_URL3=""
-WEBHOOK_URL4=""
-WEBHOOK_URL5=""
+# WEBHOOK_URL2=""
+# WEBHOOK_URL3=""
+# WEBHOOK_URL4=""
+# WEBHOOK_URL5=""
 
 # https://developer.twitter.com/en/portal/dashboard
 # Fill out your information and accept the developer agreement & policy
@@ -27,12 +29,14 @@ BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAAMGcQEAAAAA2Xh6%2Bjxw4NM7xetr2C9trBdsNUo%3DIyQ
 # RULE goes to WEBHOOK_URL
 # RULE2 goes to WEBHOOK_URL2
 # RULE3 goes to WEBHOOK_URL3 and so on
-# If you only have one webhook/rule, you can leave the other webhooks blank ("").
+# You can have 5 rules if you Essential API access.
+# You can have 25 rules if you Elevated API access.
+# You can have 1024 rules if you Academic Research API access.
 RULE="(from:Steam OR from:Xbox OR from:PlayStation) -is:retweet -is:reply -is:quote"
-RULE2=""
-RULE3=""
-RULE4=""
-RULE5=""
+# RULE2=""
+# RULE3=""
+# RULE4=""
+# RULE5=""
 
 # If True, errors will be sent to ERROR_WEBHOOK.
 ERROR_WEBHOOK=https://discord.com/api/webhooks/582696524044304394/a3CMwZWchmHAXItB_lzSSRYBx0-AlPAHseJWqhHLfsAg_X4erac9-CeVeUDqPI1ac1vT
