Add support for customizing the embed
You can customize:
Author icon
Author name
Author URL
Footer icon
Footer text
Embedded image
Thumbnail

--- a/.env.example
+++ b/.env.example
@@ -48,3 +48,31 @@ LOG_LEVEL=INFO
 # Where https://github.com/TheLovinator1/twitter-image-collage-maker is running.
 # You can run your self-hosted version or use the default https://twitter.lovinator.space/add
 TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
+
+# You can customize the webhook by uncommenting these:
+
+# The name in the embed, not the user who sent it, normally this is the tweeter name.
+# WEBHOOK_AUTHOR_NAME=TheLovinator
+
+# The URL that opens when you click the author name, normally this goes to the tweet.
+# Needs to be a URL.
+# WEBHOOK_AUTHOR_URL=https://github.com/TheLovinator1/discord-twitter-webhooks
+
+# The little icon besides the author name, normally this is the profile pic of the tweeter.
+# Needs to be a URL.
+# WEBHOOK_AUTHOR_ICON=https://avatars.githubusercontent.com/u/4153203
+
+# The image in the embed, normally this is the image/images from the tweet.
+# Needs to be a URL.
+# WEBHOOK_IMAGE=https://upload.wikimedia.org/wikipedia/commons/0/0b/Cat_poster_1.jpg
+
+# Thumbnail in the top right corner, not used normally
+# Needs to be a URL.
+# WEBHOOK_THUMBNAIL=https://avatars.githubusercontent.com/u/4153203
+
+# The footer text, not used normally
+# WEBHOOK_FOOTER_TEXT=Hello!
+
+# The little icon in the bottom left corner, not used normally
+# Needs to be a URL.
+# WEBHOOK_FOOTER_ICON=https://avatars.githubusercontent.com/u/4153203
