Breaking: Use pip instead of Poetry
We are using pip instead of Poetry now, please read the README.md again to learn how to use it, or contact me if you have any questions.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -23,14 +23,8 @@
   "enabledManagers": [
     "dockerfile",
     "docker-compose",
-    "poetry",
+    "pip_requirements",
     "github-actions"
   ],
-  "lockFileMaintenance": {
-    "enabled": true,
-    "automerge": true,
-    "automergeType": "pr",
-    "platformAutomerge": true
-  },
   "timezone": "Europe/Stockholm"
 }
