--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,7 +26,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install pytest
           python -m pip install -r requirements.txt
-      - run: poetry run pytest
+      - run: python -m pytest
         working-directory: discord_twitter_webhooks
       - uses: docker/login-action@v2
         if: github.event_name != 'pull_request'
