--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,14 +20,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-          cache: "pip"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install pytest
-          python -m pip install -r requirements.txt
-      - run: python -m pytest
-        working-directory: discord_twitter_webhooks
+      - run: pipx install poetry --python $(which python)
+      - run: poetry install
+      - run: poetry run pytest
       - uses: docker/login-action@v2
         if: github.event_name != 'pull_request'
         with:
