--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,10 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: pipx install poetry --python $(which python)
+          cache: 'poetry'
       - run: poetry install
       - run: poetry run pytest
       - uses: docker/login-action@v2
