You can now disable features

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,58 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # The little icon in the bottom left corner, not used normally
 # Needs to be a URL.
 # WEBHOOK_FOOTER_ICON=https://avatars.githubusercontent.com/u/4153203
+
+# Send a normal text message instead on an embed. Images won't work if you uncomment this.
+# NO_EMBED=True
+
+# Don't convert t.co-urls to real urls.
+# Disabled: https://t.co/1YC2hc8iUq
+# Enabled: https://www.youtube.com/
+# DISABLE_REMOVE_TCO_LINKS=True
+
+# Don't convert special characters
+# Disabled: &gt; and &lt;
+# Enabled: > and <
+# DISABLE_UNESCAPE_TEXT=True
+
+# Don't replace the @mentions with URLs.
+# Disabled: @TheLovinator1
+# Enabled: [@TheLovinator1](https://twitter.com/TheLovinator1)
+# DISABLE_REPLACE_USERNAME=True
+
+# Don't replace the hashtags with URLs.
+# Disabled: #Hello
+# Enabled: [#Hello](https://twitter.com/hashtag/Hello)
+# DISABLE_REPLACE_HASHTAG=True
+
+# Don't add < and > before and after the link to disable Discords link previews.
+# Discord will add an image below the tweet for URLs found in the tweet.
+# Disabled: https://www.example.com
+# Enabled: <https://www.example.com>
+# DISABLE_REMOVE_DISCORD_LINK_PREVIEWS=True
+
+# Change /r/subreddit to a clickable link.
+# Disabled: /r/sweden
+# Enabled: [r/sweden](https://www.reddit.com/r/sweden/)
+# DISABLE_REPLACE_SUBREDDIT=True
+
+# Change /u/username to a clickable link.
+# Disabled: /u/username
+# Enabled: [u/username](https://www.reddit.com/u/username/)
+# DISABLE_REPLACE_REDDIT_USERNAME=True
+
+# Clean up the URL by removing the ?utm-part
+# https://en.wikipedia.org/wiki/UTM_parameters
+# Disabled: steampowered.com/app/457140/Oxygen_Not_Included/?utm_source=Steam&utm_campaign=Sale&utm_medium=Twitter
+# Enabled: steampowered.com/app/457140/Oxygen_Not_Included/
+# DISABLE_REMOVE_UTM=True
+
+# Don't remove trailing whitespace
+# Disabled: "Hello "
+# Enabled: "Hello"
+# DISABLE_REMOVE_TRAILING_WHITESPACE=True
+
+# Don't remove copyright symbols (®, ™ and ©)
+# Disabled: Save 30% on UNCHARTED™: Legacy of Thieves Collection!
+# Enabled: Save 30% on UNCHARTED: Legacy of Thieves Collection!
+# DISABLE_REMOVE_COPYRIGHT_SYMBOLS=True
