--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,40 @@ services:
       # - WEBHOOK_THUMBNAIL=https://avatars.githubusercontent.com/u/4153203
       # - WEBHOOK_FOOTER_TEXT=Hello!
       # - WEBHOOK_FOOTER_ICON=https://avatars.githubusercontent.com/u/4153203
+      # Send a normal text message instead on an embed. Images won't work if you disable this.
+      # - NO_EMBED=True
+
+      # Don't convert t.co-urls to real urls.
+      # - DISABLE_REMOVE_TCO_LINKS=True
+
+      # Don't coverts &gt; and &lt; to > and < to make the text look nicer.
+      # - DISABLE_UNESCAPE_TEXT=True
+
+      # Don't replace the @mentions with URLs.
+      # - DISABLE_REPLACE_USERNAME=True
+
+      # Don't replace the hashtags with URLs.
+      # - DISABLE_REPLACE_HASHTAG=True
+
+      # Don't add < and > before and after the link to disable Discords link previews.
+      # Discord will add an image below the tweet for URLs found in the tweet.
+      # - DISABLE_REMOVE_DISCORD_LINK_PREVIEWS=True
+
+      # Change /r/subreddit to a clickable link.
+      # - DISABLE_REPLACE_SUBREDDIT=True
+
+      # Change /u/username to a clickable link.
+      # - DISABLE_REPLACE_REDDIT_USERNAME=True
+
+      # Clean up the URL by removing the ?utm-part
+      # https://en.wikipedia.org/wiki/UTM_parameters
+      # - DISABLE_REMOVE_UTM=True
+
+      # Don't remove trailing whitespace
+      # - DISABLE_REMOVE_TRAILING_WHITESPACE=True
+
+      # Don't remove copyright symbols (®, ™ and ©)
+      # - DISABLE_REMOVE_COPYRIGHT_SYMBOLS=True
 
     # The bot will only stop after we get a keep-alive signal from the
     # Twitter API, this can take 20 seconds.
