You can now show a timestamp

--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,9 @@ TWITTER_IMAGE_COLLAGE_API=https://twitter.lovinator.space/add
 # Send a normal text message instead on an embed. Images won't work if you uncomment this.
 # NO_EMBED=True
 
+# Show the date and time of the tweet in the footer.
+# SHOW_TIMESTAMP=True
+
 # Don't convert t.co-urls to real urls.
 # Disabled: https://t.co/1YC2hc8iUq
 # Enabled: https://www.youtube.com/
